feat: get genres api
