# internal/delivery/rest/api/api.go
@@ -41,6 +41,9 @@ func (api *API) Register(r chi.Router, nrApp *newrelic.Application) {
 		r.Post("/anime/{animeID}/update", api.handleUpdateAnimeByID)
 		r.Get("/anime/{animeID}/history", api.handleGetAnimeHistoriesByID)
 
+		r.Get("/genres", api.handleGetGenres)
+		r.Get("/genres/{genreID}", api.handleGetGenreByID)
+
 		r.Get("/user/{username}/anime", api.handleGetUserAnime)
 		r.Get("/user/{username}/anime/relations", api.handleGetUserAnimeRelations)
 		r.Post("/user/{username}/update", api.handleUpdateUserAnime)
